--- a/part_2.ipynb
+++ b/part_2.ipynb
@@ -29,10 +29,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keras\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from src.load_img import LoadImage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "imgloader = LoadImage()\n",
+    "imgloader.load_unpickledata()\n",
+    "train_data,train_labels,test_data,test_labels=imgloader.getData()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_data=train_data/255\n",
+    "test_data=test_data/255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_classes = 10\n",
+    "train_labels = keras.utils.to_categorical(train_labels, n_classes)\n",
+    "test_labels = keras.utils.to_categorical(test_labels, n_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numofFeatures=train_data.shape[1]\n",
+    "model=Sequential()\n",
+    "model.add(Dense(100, activation='relu', input_shape=(numofFeatures,)))\n",
+    "model.add(Dense(100,activation='relu'))\n",
+    "model.add(Dense(10, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam', loss='categorical_crossentropy',metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_sample=train_data\n",
+    "train_labels_sample=train_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "50000/50000 [==============================] - 8s 152us/step - loss: 1.7124 - acc: 0.3918\n",
+      "Epoch 2/3\n",
+      "50000/50000 [==============================] - 7s 146us/step - loss: 1.6356 - acc: 0.4189\n",
+      "Epoch 3/3\n",
+      "50000/50000 [==============================] - 7s 139us/step - loss: 1.5844 - acc: 0.4376\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fcbbe052cc0>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(train_data_sample,train_labels_sample,epochs=3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,9 +204,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "TensorFlow-GPU",
    "language": "python",
-   "name": "python3"
+   "name": "tf-gpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -101,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
