Day three Lunch

--- a/part_2.ipynb
+++ b/part_2.ipynb
@@ -44,7 +44,9 @@
     "import keras\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
-    "from src.load_img import LoadImage"
+    "from src.load_img import LoadImage\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from keras import optimizers"
    ]
   },
   {
@@ -67,13 +69,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Model Adjustments__\n",
+    " - Adjusting Batch Size (Default is 32 to 500)\n",
+    " - With a larger batch size, the accuracy increases/and cost function(loss) decrease <br/>\n",
+    "__Dont understand why__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_df1=model.fit(X_train,y_train,epochs=3, validation_data=(X_test,y_test),batch_size=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_df2=model.fit(X_train,y_train,epochs=3, validation_data=(X_test,y_test),batch_size=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_df3=model.fit(X_train,y_train,epochs=2, validation_data=(X_test,y_test),batch_size=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Data transformations/preprocessing\n",
+    "\n",
+    "Most neural networks expect the images of a fixed size. Therefore, you will need to write some prepocessing code. At the basic level, you will need to normalise the data. Use the appropriate data generator/loader methods to encapsulate your data for training purposes. Do the same for both the train and test (and val, if exist) sets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Normalizing Image Data__\n",
+    "- Instead of standard scaling, which will result in negative values.\n",
+    "- Since we know image pixels are bounded by 0-255 range, we normalize them between this range"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_data=train_data/255\n",
-    "test_data=test_data/255"
+    "test_data=test_data/255\n",
+    "n_classes = 10\n",
+    "train_labels = keras.utils.to_categorical(train_labels, n_classes)\n",
+    "test_labels = keras.utils.to_categorical(test_labels, n_classes)"
    ]
   },
   {
@@ -82,9 +149,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_classes = 10\n",
-    "train_labels = keras.utils.to_categorical(train_labels, n_classes)\n",
-    "test_labels = keras.utils.to_categorical(test_labels, n_classes)"
+    "X_train,X_test,y_train,y_test= train_test_split(train_data,train_labels,test_size=0.25,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.  Build multi-layer perceptron neural network models with Keras \n",
+    "\n",
+    "The Keras Python library for deep learning focuses on the creation of models as a sequence of layers.\n",
+    "\n",
+    "In here, you will discover the simple components that you can use to create neural networks and simple deep learning models using Keras."
    ]
   },
   {
@@ -101,91 +177,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.compile(optimizer='adam', loss='categorical_crossentropy',metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data_sample=train_data\n",
-    "train_labels_sample=train_labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/3\n",
-      "50000/50000 [==============================] - 8s 152us/step - loss: 1.7124 - acc: 0.3918\n",
-      "Epoch 2/3\n",
-      "50000/50000 [==============================] - 7s 146us/step - loss: 1.6356 - acc: 0.4189\n",
-      "Epoch 3/3\n",
-      "50000/50000 [==============================] - 7s 139us/step - loss: 1.5844 - acc: 0.4376\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7fcbbe052cc0>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.fit(train_data_sample,train_labels_sample,epochs=3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Data transformations/preprocessing\n",
-    "\n",
-    "Most neural networks expect the images of a fixed size. Therefore, you will need to write some prepocessing code. At the basic level, you will need to normalise the data. Use the appropriate data generator/loader methods to encapsulate your data for training purposes. Do the same for both the train and test (and val, if exist) sets."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2.  Build multi-layer perceptron neural network models with Keras \n",
-    "\n",
-    "The Keras Python library for deep learning focuses on the creation of models as a sequence of layers.\n",
-    "\n",
-    "In here, you will discover the simple components that you can use to create neural networks and simple deep learning models using Keras."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -196,10 +187,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sgd = optimizers.SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)\n",
+    "model.compile(optimizer=sgd,loss='categorical_crossentropy',metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 37500 samples, validate on 12500 samples\n",
+      "Epoch 1/3\n",
+      "37500/37500 [==============================] - 6s 171us/step - loss: 1.8583 - acc: 0.3253 - val_loss: 1.7455 - val_acc: 0.3698\n",
+      "Epoch 2/3\n",
+      "37500/37500 [==============================] - 5s 120us/step - loss: 1.6960 - acc: 0.3915 - val_loss: 1.6603 - val_acc: 0.3896\n",
+      "Epoch 3/3\n",
+      "37500/37500 [==============================] - 4s 116us/step - loss: 1.6349 - acc: 0.4146 - val_loss: 1.6185 - val_acc: 0.4139\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7ffa73f71278>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train,y_train,epochs=3, validation_data=(X_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss: 1.6025190896987915\n",
+      "Test accuracy: 0.4188\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = model.evaluate(test_data, test_labels, verbose=0)\n",
+    "print('Test loss:', score[0])\n",
+    "print('Test accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Factor the code and add in to try different alpha rates and Early Stopping"
+   ]
   }
  ],
  "metadata": {
