--- a/TestKeras.ipynb
+++ b/TestKeras.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "from keras.datasets import mnist\n",
@@ -16,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +52,7 @@
        "(60000, 28, 28, 1)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,33 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 60000 samples, validate on 10000 samples\n",
-      "Epoch 1/3\n",
-      "60000/60000 [==============================] - 23s 377us/step - loss: 0.2344 - acc: 0.9294 - val_loss: 0.0484 - val_acc: 0.9834\n",
-      "Epoch 2/3\n",
-      "60000/60000 [==============================] - 21s 350us/step - loss: 0.0841 - acc: 0.9736 - val_loss: 0.0363 - val_acc: 0.9879\n",
-      "Epoch 3/3\n",
-      "60000/60000 [==============================] - 21s 358us/step - loss: 0.0600 - acc: 0.9817 - val_loss: 0.0326 - val_acc: 0.9886\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7fd0abdb7d30>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.fit(X_train, y_train, batch_size=128, epochs=3, verbose=1,\n",
     "          validation_data=(X_test,y_test), callbacks=[tensor_board])"
