--- a/part_3.ipynb
+++ b/part_3.ipynb
@@ -209,7 +209,12 @@
     "from keras.layers import Dense\n",
     "from src.load_img import LoadImage\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from keras import optimizers"
+    "from keras import optimizers\n",
+    "\n",
+    "from keras.layers import Dense, Dropout\n",
+    "from keras.layers import Flatten,  MaxPooling2D, Conv2D,BatchNormalization\n",
+    "from keras.callbacks import EarlyStopping\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -228,7 +233,7 @@
    "source": [
     "imgloader = LoadImage()\n",
     "imgloader.load_unpickledata()\n",
-    "train_data,train_labels,test_data,test_labels=imgloader.getData()"
+    "train_data,train_labels,test_data,test_labels=imgloader.getVisData()"
    ]
   },
   {
@@ -246,56 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10000, 3072)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train,X_test,y_train,y_test= train_test_split(train_data,train_labels,test_size=0.25,random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numofFeatures=train_data.shape[1]\n",
-    "model = Sequential()\n",
-    "model.add(Conv2D(32, kernel_size=(3,3), activation='relu', input_shape=(28,28,1)) )\n",
-    "model.add(Conv2D(64, kernel_size=(3,3), activation='relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "model.add(Dropout(0.25))\n",
-    "model.add(Flatten())          \n",
-    "model.add(Dense(128, activation='relu'))\n",
-    "model.add(Dropout(0.5))\n",
-    "model.add(Dense(n_classes, activation='softmax'))\n",
-    "\n",
-    "\n",
-    "numofFeatures=train_data.shape[1]\n",
-    "model=Sequential()\n",
-    "model.add(Dense(100, activation='relu', input_shape=(numofFeatures,)))\n",
-    "model.add(Dense(100,activation='relu'))\n",
-    "model.add(Dense(10, activation='softmax'))\n"
    ]
   },
   {
@@ -309,18 +269,374 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Baseline CNN Model__"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cnn_model_base = Sequential()\n",
+    "cnn_model_base.add(Conv2D(64, kernel_size=3, activation='relu', input_shape=(32,32,3)))\n",
+    "cnn_model_base.add(Conv2D(32, kernel_size=3, activation='relu'))\n",
+    "cnn_model_base.add(Flatten())\n",
+    "cnn_model_base.add(Dense(10, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_model_base.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 37500 samples, validate on 12500 samples\n",
+      "Epoch 1/10\n",
+      "37500/37500 [==============================] - 29s 762us/step - loss: 1.4884 - acc: 0.4705 - val_loss: 1.2789 - val_acc: 0.5487\n",
+      "Epoch 2/10\n",
+      "37500/37500 [==============================] - 25s 672us/step - loss: 1.1484 - acc: 0.5999 - val_loss: 1.1755 - val_acc: 0.5954\n",
+      "Epoch 3/10\n",
+      "37500/37500 [==============================] - 26s 681us/step - loss: 0.9790 - acc: 0.6620 - val_loss: 1.0678 - val_acc: 0.6258\n",
+      "Epoch 4/10\n",
+      "37500/37500 [==============================] - 26s 693us/step - loss: 0.8456 - acc: 0.7064 - val_loss: 1.1016 - val_acc: 0.6255\n",
+      "Epoch 5/10\n",
+      "37500/37500 [==============================] - 26s 690us/step - loss: 0.7279 - acc: 0.7484 - val_loss: 1.1282 - val_acc: 0.6257\n",
+      "Epoch 6/10\n",
+      "37500/37500 [==============================] - 26s 688us/step - loss: 0.6186 - acc: 0.7855 - val_loss: 1.2033 - val_acc: 0.6186\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fb6e55206a0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "early_stopping_monitor = EarlyStopping(patience=3)\n",
+    "cnn_model_base.fit(X_train, y_train,  epochs=10, verbose=1,validation_data=(X_test,y_test), callbacks=[early_stopping_monitor])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__CNN Model with Dropout__\n",
+    "- Will randomly drop neurons in every pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_model_dropout = Sequential()\n",
+    "cnn_model_dropout.add(Conv2D(64, kernel_size=3, activation='relu', input_shape=(32,32,3)))\n",
+    "cnn_model_dropout.add(Dropout(0.25))\n",
+    "cnn_model_dropout.add(Conv2D(32, kernel_size=3, activation='relu'))\n",
+    "cnn_model_dropout.add(Dropout(0.25))\n",
+    "\n",
+    "cnn_model_dropout.add(Flatten())\n",
+    "cnn_model_dropout.add(Dense(10, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_model_dropout.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 37500 samples, validate on 12500 samples\n",
+      "Epoch 1/10\n",
+      "37500/37500 [==============================] - 38s 1ms/step - loss: 1.5395 - acc: 0.4483 - val_loss: 1.2618 - val_acc: 0.5555\n",
+      "Epoch 2/10\n",
+      "37500/37500 [==============================] - 38s 1ms/step - loss: 1.1908 - acc: 0.5807 - val_loss: 1.1530 - val_acc: 0.6007\n",
+      "Epoch 3/10\n",
+      "37500/37500 [==============================] - 38s 1ms/step - loss: 1.0555 - acc: 0.6312 - val_loss: 1.1240 - val_acc: 0.6058\n",
+      "Epoch 4/10\n",
+      "37500/37500 [==============================] - 37s 995us/step - loss: 0.9427 - acc: 0.6717 - val_loss: 1.1036 - val_acc: 0.6175\n",
+      "Epoch 5/10\n",
+      "37500/37500 [==============================] - 38s 1ms/step - loss: 0.8683 - acc: 0.6952 - val_loss: 1.0716 - val_acc: 0.6302\n",
+      "Epoch 6/10\n",
+      "37500/37500 [==============================] - 40s 1ms/step - loss: 0.8056 - acc: 0.7189 - val_loss: 1.1010 - val_acc: 0.6299\n",
+      "Epoch 7/10\n",
+      "37500/37500 [==============================] - 40s 1ms/step - loss: 0.7420 - acc: 0.7400 - val_loss: 1.1208 - val_acc: 0.6282\n",
+      "Epoch 8/10\n",
+      "37500/37500 [==============================] - 40s 1ms/step - loss: 0.6919 - acc: 0.7554 - val_loss: 1.1137 - val_acc: 0.6266\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fb6e2802eb8>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "early_stopping_monitor = EarlyStopping(patience=3)\n",
+    "cnn_model_dropout.fit(X_train, y_train,  epochs=10, verbose=1,validation_data=(X_test,y_test), callbacks=[early_stopping_monitor])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__CNN Model with Dropout and Maxpool__\n",
+    " - Will slide a 2x2 filter and take the max of the matrix\n",
+    "     - An x*x img will become a x/2 * x/2 img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_model_dropout_maxpool = Sequential()\n",
+    "cnn_model_dropout_maxpool.add(Conv2D(64, kernel_size=3, activation='relu', input_shape=(32,32,3)))\n",
+    "cnn_model_dropout_maxpool.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "cnn_model_dropout_maxpool.add(Dropout(0.25))\n",
+    "cnn_model_dropout_maxpool.add(Conv2D(32, kernel_size=3, activation='relu'))\n",
+    "cnn_model_dropout_maxpool.add(Dropout(0.25))\n",
+    "\n",
+    "cnn_model_dropout_maxpool.add(Flatten())\n",
+    "cnn_model_dropout_maxpool.add(Dense(10, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_model_dropout_maxpool.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 37500 samples, validate on 12500 samples\n",
+      "Epoch 1/10\n",
+      "37500/37500 [==============================] - 19s 511us/step - loss: 1.5773 - acc: 0.4336 - val_loss: 1.2821 - val_acc: 0.5513\n",
+      "Epoch 2/10\n",
+      "37500/37500 [==============================] - 19s 519us/step - loss: 1.2397 - acc: 0.5644 - val_loss: 1.1979 - val_acc: 0.5764\n",
+      "Epoch 3/10\n",
+      "37500/37500 [==============================] - 19s 499us/step - loss: 1.1116 - acc: 0.6091 - val_loss: 1.0900 - val_acc: 0.6175\n",
+      "Epoch 4/10\n",
+      "37500/37500 [==============================] - 18s 489us/step - loss: 1.0421 - acc: 0.6367 - val_loss: 1.0325 - val_acc: 0.6422\n",
+      "Epoch 5/10\n",
+      "37500/37500 [==============================] - 19s 499us/step - loss: 0.9909 - acc: 0.6530 - val_loss: 1.0056 - val_acc: 0.6526\n",
+      "Epoch 6/10\n",
+      "37500/37500 [==============================] - 19s 515us/step - loss: 0.9534 - acc: 0.6654 - val_loss: 0.9788 - val_acc: 0.6598\n",
+      "Epoch 7/10\n",
+      "37500/37500 [==============================] - 21s 573us/step - loss: 0.9149 - acc: 0.6825 - val_loss: 0.9773 - val_acc: 0.6603\n",
+      "Epoch 8/10\n",
+      "37500/37500 [==============================] - 21s 561us/step - loss: 0.8895 - acc: 0.6917 - val_loss: 0.9758 - val_acc: 0.6623\n",
+      "Epoch 9/10\n",
+      "37500/37500 [==============================] - 21s 563us/step - loss: 0.8614 - acc: 0.7011 - val_loss: 0.9853 - val_acc: 0.6601\n",
+      "Epoch 10/10\n",
+      "37500/37500 [==============================] - 21s 573us/step - loss: 0.8356 - acc: 0.7065 - val_loss: 0.9660 - val_acc: 0.6711\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fb6e03f1a58>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "early_stopping_monitor = EarlyStopping(patience=3)\n",
+    "cnn_model_dropout_maxpool.fit(X_train, y_train,  epochs=10, verbose=1,validation_data=(X_test,y_test), callbacks=[early_stopping_monitor])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__CNN Model with Dropout/MaxPool/BatchNormalization__\n",
+    "- Batch Normalization will normalize the values in the hidden layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_model_dropout_maxpool_batchnormalization = Sequential()\n",
+    "cnn_model_dropout_maxpool_batchnormalization.add(Conv2D(64, kernel_size=3, activation='relu', input_shape=(32,32,3)))\n",
+    "cnn_model_dropout_maxpool_batchnormalization.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "cnn_model_dropout_maxpool_batchnormalization.add(Dropout(0.25))\n",
+    "cnn_model_dropout_maxpool_batchnormalization.add(BatchNormalization())\n",
+    "cnn_model_dropout_maxpool_batchnormalization.add(Conv2D(32, kernel_size=3, activation='relu'))\n",
+    "cnn_model_dropout_maxpool_batchnormalization.add(Dropout(0.25))\n",
+    "\n",
+    "cnn_model_dropout_maxpool_batchnormalization.add(Flatten())\n",
+    "cnn_model_dropout_maxpool_batchnormalization.add(Dense(10, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_model_dropout_maxpool_batchnormalization.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 37500 samples, validate on 12500 samples\n",
+      "Epoch 1/10\n",
+      "37500/37500 [==============================] - 23s 621us/step - loss: 1.4841 - acc: 0.4699 - val_loss: 1.2769 - val_acc: 0.5562\n",
+      "Epoch 2/10\n",
+      "37500/37500 [==============================] - 24s 630us/step - loss: 1.1779 - acc: 0.5837 - val_loss: 1.2012 - val_acc: 0.5820\n",
+      "Epoch 3/10\n",
+      "37500/37500 [==============================] - 24s 652us/step - loss: 1.0769 - acc: 0.6256 - val_loss: 1.7890 - val_acc: 0.4668\n",
+      "Epoch 4/10\n",
+      "37500/37500 [==============================] - 24s 638us/step - loss: 1.0137 - acc: 0.6456 - val_loss: 1.7074 - val_acc: 0.4971\n",
+      "Epoch 5/10\n",
+      "37500/37500 [==============================] - 24s 643us/step - loss: 0.9595 - acc: 0.6662 - val_loss: 0.9927 - val_acc: 0.6533\n",
+      "Epoch 6/10\n",
+      "37500/37500 [==============================] - 24s 643us/step - loss: 0.9220 - acc: 0.6787 - val_loss: 1.0643 - val_acc: 0.6297\n",
+      "Epoch 7/10\n",
+      "37500/37500 [==============================] - 23s 617us/step - loss: 0.8996 - acc: 0.6862 - val_loss: 1.0410 - val_acc: 0.6411\n",
+      "Epoch 8/10\n",
+      "37500/37500 [==============================] - 19s 496us/step - loss: 0.8743 - acc: 0.6921 - val_loss: 1.0111 - val_acc: 0.6487\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fb6e5f33320>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "early_stopping_monitor = EarlyStopping(patience=3)\n",
+    "cnn_model_dropout_maxpool_batchnormalization.fit(X_train, y_train,  epochs=10, verbose=1,validation_data=(X_test,y_test), callbacks=[early_stopping_monitor])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Data Augmentation__\n",
+    " - The training data is very balanced, data augmentation might not make a big impact"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_data,train_labels,test_data,test_labels=imgloader.getVisData()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df =pd.DataFrame(train_labels,columns=['Label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Testing Accuracy__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss: 1.0360902584075928\n",
+      "Test accuracy: 0.6406\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = cnn_model_dropout_maxpool_batchnormalization.evaluate(test_data, test_labels, verbose=0)\n",
+    "print('Test loss:', score[0])\n",
+    "print('Test accuracy:', score[1])"
+   ]
   }
  ],
  "metadata": {
