--- a/TestKeras.ipynb
+++ b/TestKeras.ipynb
@@ -43,27 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(60000, 28, 28, 1)"
+       "(10000, 10)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train.shape"
+    "y_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,12 +98,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 60000 samples, validate on 10000 samples\n",
+      "Epoch 1/3\n",
+      "60000/60000 [==============================] - 27s 453us/step - loss: 0.2347 - acc: 0.9297 - val_loss: 0.0495 - val_acc: 0.9829\n",
+      "Epoch 2/3\n",
+      "60000/60000 [==============================] - 24s 399us/step - loss: 0.0822 - acc: 0.9757 - val_loss: 0.0453 - val_acc: 0.9850\n",
+      "Epoch 3/3\n",
+      "60000/60000 [==============================] - 22s 371us/step - loss: 0.0627 - acc: 0.9807 - val_loss: 0.0298 - val_acc: 0.9898\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fd4128b3e10>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.fit(X_train, y_train, batch_size=128, epochs=3, verbose=1,\n",
-    "          validation_data=(X_test,y_test), callbacks=[tensor_board])"
+    "          validation_data=(X_test,y_test))"
    ]
   },
   {
